--- a/src/main/frontend/assets/css/ownstyle.css
+++ b/src/main/frontend/assets/css/ownstyle.css
@@ -30,7 +30,7 @@
 }
 
 .report-round-button {
-    right: 5%;
+    right: 15%;
     top: 100px;
     position: fixed;
     z-index: 1001;
@@ -51,7 +51,7 @@
     height: 70px;
     border-radius: 45px;
     background-color: #0da59b;
-    padding-top: 4px;
+    padding-top: 18px;
     position: absolute;
     z-index: 10;
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12) !important;
@@ -83,6 +83,10 @@
 .alert_style{
     font-size: 44px;
     color:red;
+}
+
+.bg_grey{
+    background-color: #eee;
 }
 
 @media (min-width: 768px) {
@@ -271,7 +275,7 @@
             border: 0;
             line-height: 1.42857143 !important;
             letter-spacing: 1px;
-            font-size: 16px;
+            font-size: 13px;
             border-radius: 0;
         }
 
