--- a/src/main/frontend/assets/css/ownstyle.css
+++ b/src/main/frontend/assets/css/ownstyle.css
@@ -30,7 +30,7 @@
 }
 
 .report-round-button {
-    right: 15%;
+    right: 10%;
     top: 100px;
     position: fixed;
     z-index: 1001;
@@ -58,6 +58,13 @@
     -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12) !important;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12) !important;
     cursor: pointer;
+}
+
+.medicine{
+    height: 447px;
+    padding: 20px;
+    margin-top: 30px;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
 }
 
 @keyframes shadow-pulse {
