Upgrade Druglist with grid/list filter

--- a/src/main/frontend/assets/css/main.css
+++ b/src/main/frontend/assets/css/main.css
@@ -2,6 +2,8 @@ html {
 	position: relative;
 	min-height: 100%;
 	background-color: rgb(255, 255, 255);
+	scroll-behavior: smooth;
+
 }
 
 body { margin-bottom: 330px; }
